<resources>
    <string name="app_name">Лист персонажа</string>
    <string name="mail_hint">Введите адрес электронной почты:</string>
    <string name="mail_rep_hint">Повторите адрес электронной почты:</string>
    <string name="pass_hint">Введите пароль:</string>
    <string name="pass_rep_hint">Повторите пароль:</string>
    <string name="valid_btn">Вход</string>
    <string name="valid_google_btn">Вход через Google</string>
    <string name="reg_hint_btn">Нет аккаунта?Зарегестрируйтесь!</string>
    <string name="reg_btn">Регистрация</string>
    <string name="forget_pass_btn">Забыли пароль?</string>
    <string name="return_to_auth">Зарегестрированы? Войдите</string>
    <string name="send_code_btn">Выслать код восстановления на почту</string>
    <string name="MyChars">Мои персонажи</string>
    <string-array name="chars">
        <item>Дэ Бил</item>
        <item>Э БАН</item>
        <item>Не сдал</item>
    </string-array>

    <string-array name="race">
        <item>Негр</item>
        <item>негр пидарас</item>
        <item>Г`ом</item>
    </string-array>

    <string-array name="lvl">
        <item>1lvl</item>
        <item>3lvl</item>
        <item>Магистр</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>